--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="resource-type" content="document">
     <meta name="distribution" content="global">
     <meta name="KeyWords" content="Conference">
-    <title>Conference Template</title>
+    <title>NCVPRIG</title>
 </head>
 
 <body>
@@ -17,7 +17,7 @@
     <div class="banner">
         <img src="assets/banner.jpg" alt="Conference Template Banner">
         <div class="top-left">
-            <span class="title1">Conference</span><span class="title2">Template</span> <span class="year">2024</span>
+            <span class="title1">NCVPRIG</span><span class="title2"></span> <span class="year">2024</span>
         </div>
         <div class="bottom-right">
             June 31, 2525 <br> IIST, Trivandrum
